fix: wrapping issue

--- a/_sass/theme/_aside.scss
+++ b/_sass/theme/_aside.scss
@@ -4,7 +4,7 @@ aside {
     .grid {
         display: grid !important;
         grid-gap: 1rem 3rem;
-        grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
+        grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
         width: 100%;
     }
 
